Added Hamburger Menu

--- a/Website 1/.vscode/settings.json
+++ b/Website 1/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["onscroll", "siddharth", "topbtn", "topup", "topupbtn"]
+  "cSpell.words": [
+    "onscroll",
+    "siddharth",
+    "togglemenu",
+    "topbtn",
+    "topup",
+    "topupbtn"
+  ]
 }
